# intwave

./: .gitignore  CLAUDE.md  Cargo.toml  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
app/: RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts
app/scripts/: prepare-flac.sh
app/src/: App.tsx  api.ts  i18n.ts  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs  playback.rs
app/src/components/: Inspector.tsx  RegionEditor.tsx  StatusBadges.tsx  TrackList.tsx  Waveform.tsx
crates/intwav-cli/: Cargo.toml
crates/intwav-cli/src/: commands.rs  format.rs  hash.rs  main.rs  params.rs  report.rs  timecode.rs
crates/intwav-cli/src/commands/: edit.rs  export.rs  inspect.rs  mod.rs  split.rs  trim.rs  verify.rs
crates/intwav-cli/tests/: cli.rs
crates/intwav-codec/: Cargo.toml
crates/intwav-codec/src/: flac.rs  lib.rs  stream.rs  wav.rs
crates/intwav-core/: Cargo.toml
crates/intwav-core/src/: analysis.rs  dbfs.rs  dither.rs  lib.rs  process.rs
crates/intwav-engine/: Cargo.toml
crates/intwav-engine/src/: audio.rs  command.rs  config.rs  document.rs  error.rs  hash.rs  lib.rs  open.rs  ops.rs  progress.rs  project.rs  render.rs  report.rs  scratch.rs  waveform.rs  write.rs
crates/intwav-engine/tests/: engine.rs  project.rs
crates/intwav-playback/: Cargo.toml
crates/intwav-playback/src/: error.rs  feeder.rs  lib.rs  player.rs  resample.rs  source.rs
crates/intwav-playback/tests/: pipeline.rs
scripts/: check-no-float.sh  fp-mnemonics.txt
