# Detached from the parent Cargo workspace (its own [workspace] table) so the
# heavy Tauri build never slows the core workspace or CI. It path-depends on the
# engine crates directly.
[workspace]

[package]
name = "intwav-gui"
description = "intwav — integer PCM archive audio editor (Tauri + React)"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.94"

[lib]
name = "intwav_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

intwav-core = { path = "../../crates/intwav-core" }
intwav-codec = { path = "../../crates/intwav-codec" }
intwav-engine = { path = "../../crates/intwav-engine" }
intwav-playback = { path = "../../crates/intwav-playback" }

[features]
# Enable custom-protocol for production builds (Tauri convention).
custom-protocol = ["tauri/custom-protocol"]
