[package]
name = "intwav-cli"
description = "Command-line interface for intwav — integer PCM archival tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "intwav"
path = "src/main.rs"

[dependencies]
intwav-engine.workspace = true
clap.workspace = true
anyhow.workspace = true

[dev-dependencies]
intwav-codec.workspace = true
intwav-engine.workspace = true
serde_json.workspace = true
tempfile.workspace = true
